feat: 답변 그룹화 추가
